Fix jumping PillsInput height

--- a/src/mantine-core/src/components/PillsInput/PillsInputField/PillsInputField.module.css
+++ b/src/mantine-core/src/components/PillsInput/PillsInputField/PillsInputField.module.css
@@ -5,6 +5,7 @@
   flex: 1;
   border: 0;
   font-size: inherit;
+  height: 1.6em;
 
   &::placeholder {
     color: var(--_input-placeholder-color);
